# libnurbs

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  README.verb  dxf.c  dxf.h  dxf.zip.dlpsw  dxf_api.h  dxf_callback.h  dxf_codes.h  dxf_color.inl  dxf_config.h.in  dxf_document.c  dxf_document.h  dxf_entities.h  dxf_reader.c  dxf_writer.c  libcadshape.c  libcadshape.h  nurbs.c  nurbs.h  nurbs_analyze.c  nurbs_api.h  nurbs_array.c  nurbs_eval.c  nurbs_internal.h  nurbs_intersect.c  nurbs_make.c  nurbs_mat.c  nurbs_vec.c  nurbs_viewer.c  nurbsconf.h.in  tc.c  tc.h
